--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Testing
 
 # Controls when the workflow will run
 on:
@@ -22,7 +22,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4, python
+      - uses: actions/checkout@v4
       - name: Run a one-line script
         run: |
           python.exe -m unittest rectangle.py
