--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -25,10 +25,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run a one-line script
         run: |
-          python.exe -m unittest rectangle.py
-          python.exe -m unittest square.py
-          python.exe -m unittest circle.py
-          python.exe -m unittest triangle.py
+          python -m unittest rectangle.py
+          python -m unittest square.py
+          python -m unittest circle.py
+          python -m unittest triangle.py
           
 
       # # Runs a set of commands using the runners shell
