--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,6 +21,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: Satisfy requirements
+      run: |
+        python -m pip install --upgrade pip
+        pip install stem
     - name: Test with unittest
       run: |
         python -m unittest rectangle.py
