--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ permissions:
   contents: read
 
 jobs:
-  test:
+  preparations:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -21,15 +21,27 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install stem
+  Test_rectangle:
+    runs-on: ubuntu-latest
+    needs: preparations
+    steps:
     - name: Test rectangle
       run: python -m unittest rectangle.py
-      continue-on-error: true
+  Test_square:
+    runs-on: ubuntu-latest
+    needs: preparations
+    steps:
     - name: Test square
       run: python -m unittest square.py
-      continue-on-error: true
+  Test_circle:
+    runs-on: ubuntu-latest
+    needs: preparations
+    steps:  
     - name: Test circle
       run: python -m unittest circle.py
-      continue-on-error: true
+  Test_triangle:
+    runs-on: ubuntu-latest
+    needs: preparations
+    steps:
     - name: Test triangle
       run: python -m unittest triangle.py
-      continue-on-error: true
