--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install stem
+    - name: Point on directory
+      run: export PYTHONPATH=$PYTHONPATH:.
   Test_rectangle:
     runs-on: ubuntu-latest
     needs: preparations
