--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,8 @@ permissions:
 jobs:
   preparations:
     runs-on: ubuntu-latest
+    env:
+      PYTHONPATH: ${{ github.workspace }}
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.10
