--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,8 +95,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install stem
-    - name: Point on directory
-      run: export PYTHONPATH=$PYTHONPATH:.
+    # - name: Point on directory
+    #   run: export PYTHONPATH=$PYTHONPATH{.
     - name: Test rectangle
       run: python -m unittest rectangle.py
   Test_square-windows:
